--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@ function holdFirstFrame(src) {
   v.requestVideoFrameCallback(() => swap());
 }
 
+/* 🔒 Plays video fully, locks taps, unlocks ONLY on end */
 function playThenHold(src, nextHold, onEnd) {
+  busy = true;
+
   const v = vids[back];
   v.src = src;
   v.currentTime = 0;
@@ -131,10 +134,14 @@ function playThenHold(src, nextHold, onEnd) {
     v.onended = null;
     if (nextHold) holdFirstFrame(nextHold);
     if (onEnd) onEnd();
+    busy = false;
   };
 }
 
+/* 🔒 Plays video fully, holds LAST frame, waits for tap */
 function playThenHoldLastFrame(src, payload) {
+  busy = true;
+
   const v = vids[back];
   v.src = src;
   v.currentTime = 0;
@@ -149,8 +156,8 @@ function playThenHoldLastFrame(src, payload) {
     v.onended = null;
     v.pause();              // hold last frame
     state = 3;              // RESULT_HOLD
-    busy = false;
     resultPayload = payload;
+    busy = false;           // tap now allowed
   };
 }
 
@@ -166,24 +173,20 @@ tapZone.addEventListener("click", () => {
   if (busy) return;
 
   if (state === 0) {
-    busy = true;
     playThenHold(LENS, CRANK, () => {
       state = 1;
-      busy = false;
     });
   }
 
   else if (state === 1) {
-    busy = true;
     playThenHold(CRANK, SNAP, () => {
       state = 2;
-      busy = false;
     });
   }
 
   else if (state === 2) {
     uploader.value = "";
-    uploader.click();
+    uploader.click(); // iOS-safe user gesture
   }
 
   else if (state === 3 && resultPayload) {
