--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function goBack(extra = {}) {
 }
 
 /* ─────────────────────────────
-   VIDEO ENGINE (DOUBLE BUFFER)
+   VIDEO ENGINE
 ───────────────────────────── */
 const vids = [document.getElementById("v1"), document.getElementById("v2")];
 const uploader = document.getElementById("uploader");
@@ -94,10 +94,10 @@ let resultPayload = null;
 
 /*
   STATES:
-  0 = lens frame
-  1 = film crank frame
+  0 = lens
+  1 = crank
   2 = READY_FOR_CAMERA
-  3 = RESULT_HOLD (tap to return)
+  3 = RESULT_HOLD
 */
 
 function swap() {
@@ -112,17 +112,15 @@ function holdFirstFrame(src) {
   v.currentTime = 0;
   v.pause();
   v.load();
-
   v.requestVideoFrameCallback(() => swap());
 }
 
-/* 🔒 Plays video fully, locks taps, unlocks ONLY on end */
 function playThenHold(src, nextHold, onEnd) {
   busy = true;
-
   const v = vids[back];
   v.src = src;
   v.currentTime = 0;
+  v.loop = false;
   v.load();
 
   v.requestVideoFrameCallback(() => {
@@ -138,13 +136,26 @@ function playThenHold(src, nextHold, onEnd) {
   };
 }
 
-/* 🔒 Plays video fully, holds LAST frame, waits for tap */
-function playThenHoldLastFrame(src, payload) {
+/* 🔁 LOOPING LOADING VIDEO */
+function playLoop(src) {
   busy = true;
-
   const v = vids[back];
   v.src = src;
   v.currentTime = 0;
+  v.loop = true;
+  v.load();
+
+  v.requestVideoFrameCallback(() => {
+    swap();
+    v.play();
+  });
+}
+
+function playThenHoldLastFrame(src, payload) {
+  const v = vids[back];
+  v.src = src;
+  v.currentTime = 0;
+  v.loop = false;
   v.load();
 
   v.requestVideoFrameCallback(() => {
@@ -154,10 +165,10 @@ function playThenHoldLastFrame(src, payload) {
 
   v.onended = () => {
     v.onended = null;
-    v.pause();              // hold last frame
-    state = 3;              // RESULT_HOLD
+    v.pause();
+    state = 3;
     resultPayload = payload;
-    busy = false;           // tap now allowed
+    busy = false;
   };
 }
 
@@ -173,37 +184,32 @@ tapZone.addEventListener("click", () => {
   if (busy) return;
 
   if (state === 0) {
-    playThenHold(LENS, CRANK, () => {
-      state = 1;
-    });
+    playThenHold(LENS, CRANK, () => state = 1);
   }
-
   else if (state === 1) {
-    playThenHold(CRANK, SNAP, () => {
-      state = 2;
-    });
+    playThenHold(CRANK, SNAP, () => state = 2);
   }
-
   else if (state === 2) {
     uploader.value = "";
-    uploader.click(); // iOS-safe user gesture
+    uploader.click();
   }
-
   else if (state === 3 && resultPayload) {
     goBack(resultPayload);
   }
 });
 
 /* ─────────────────────────────
-   PHOTO RESULT → SNAP → PASS/FAIL
+   PHOTO RESULT (WITH LOADING)
 ───────────────────────────── */
 uploader.addEventListener("change", async () => {
   const file = uploader.files[0];
-
   if (!file) {
     state = 2;
     return;
   }
+
+  // 🎞️ Start loading animation immediately
+  playLoop(SNAP);
 
   try {
     const res = await fetch(UPLOAD_API, {
@@ -215,17 +221,13 @@ uploader.addEventListener("change", async () => {
     const data = await res.json();
     const passed = data.verified === true;
 
-    const payload = {
-      verified: passed ? "true" : "false",
-      image: data.publicUrl || ""
-    };
-
-    playThenHold(SNAP, null, () => {
-      playThenHoldLastFrame(
-        passed ? PASS : FAIL,
-        payload
-      );
-    });
+    playThenHoldLastFrame(
+      passed ? PASS : FAIL,
+      {
+        verified: passed ? "true" : "false",
+        image: data.publicUrl || ""
+      }
+    );
 
   } catch {
     playThenHoldLastFrame(FAIL, { verified: "false" });
